<resources>
    <string name="app_name">Post Photo</string>

    <!--
            XML Code Layout

    -->

    <string name="register_text">Create account</string>
    <string name="i_not_have_account">I not have an account?</string>
    <string name="Already_an_account">I already have an account?</string>

    <string name="add_data_user">Add Data</string>
    <string name="write_message">Write Message...</string>
    <string name="edit_image">Edit Image</string>
    <string name="remimber_me">Remimber Me</string>
    <string name="save_status">Save Status</string>
    <string name="me">Me</string>
    <string name="search">Search</string>
    <string name="next">Next</string>

    <string name="title_activity_conversation">My Conversation</string>
    <string name="title_activity_friends">My Friends</string>
    <string name="add_Friends">Add Friends</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="log_out_dialog">Log out in You &amp; Me?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="gender">Gender</string>
    <string name="genderMail">Mail</string>
    <string name="genderFemail">Femail</string>
    <string name="yourName">Your Name</string>
    <string name="yourPhone">Your Phone</string>
    <string name="yourAge">Your Age</string>
    <string name="change_profile_image">Change Profile Image</string>

    <string name="user_name">Username</string>
    <string name="e_mail">e-mail</string>
    <string name="passwrod">Passwrod</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="account_settings">Settings</string>
    <string name="all_usres">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_your_account">Login to your Account</string>
    <string name="welcome_app"><![CDATA[Welcome to You & Me Chat App]]></string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome To Requests Fragment</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="friends2">Friends</string>
    <string name="friends_online">Friends Online</string>

    <string name="enterEmail">Enter e-mail</string>
    <string name="enterPass">Enter Password</string>
    <string name="enterConfPass">Confirm Password</string>

    <string name="forget_pass">forget your password ?</string>
    <string name="register">Register</string>
    <string name="login2">Log In</string>
    <string name="resetPass">Reset Password</string>

    <string name="default_status">Hi there, I\'m using You &amp; Me</string>
    <string name="enter_status">Enter your status</string>
    <string name="status">Status</string>
    <string name="all_users">Users</string>
    <string name="conversation">Conversation</string>
    <string name="conversation2">Conversations</string>
    <string name="title_activity_all_users">title_activity_all_users</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="home">Home</string>
    <string name="editdata">Edit Profile</string>


    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="password_confirm">Confirm Password</string>

    <string name="send_message">Send Message</string>
    <string name="send">Send</string>
    <string name="open_profile">Open Profile</string>


    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="change_language">Change Language</string>
    <string name="delete_account">Delete Account</string>
    <string name="login_text">Log In</string>

    <string name="set_profile_image">Set a Profile Image</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="remove_image">Remove Image</string>

    <string name="background">Wallpaper</string>

    <string name="select_status">Select Your Status</string>

    <string name="language_settings">Language Settings</string>


    <!--
            JAVA Code Activity

    -->


    <string name="change_email_successfull">Change Email Successfull</string>
    <string name="success_to_change_password">Success to Change Password</string>
    <string name="error_to_change_email_pass">Something went wrong. Please try again later</string>

    <string name="two_passwords_match">The two passwords do not match</string>
    <string name="password_must_be_more_than_6_characters_long">Password must be more than 6 characters long</string>


    <string name="really_delete_accouny">Do You Want Really Delete your Accouny</string>
    <string name="really_delete_chat">Do You Want Really Delete this Conversation</string>
    <string name="delete">Delete</string>


    <string name="email_verification">Email Verification</string>
    <string name="email_verification_done">Email Verification Done</string>


    <string name="cannot_Log_in">Cannot Log In. Please check Email or Password.</string>
    <string name="cannot_Log_up">Cannot Create Account. Please check Email or Password.</string>
    <string name="retry">Retry</string>
    <string name="check_internet">No Internet Connection Please Later</string>


    <string name="enter_registered_email">Enter your registered e-mail</string>
    <string name="sent_message_to_reset_password">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send_email">Failed to send email!</string>

    <string name="forward_message">Forward To</string>

    <string name="error_in_sending_request">There was some error in sending request</string>


    <string name="add_data_success">Add Data Success</string>
    <string name="edit_data_success">Edit Data Successfull</string>
    <string name="error_in_uploading_image">Error in uploading Image.</string>


    <string name="sent_friend_request">Sent Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unFriend_this_person">UnFriend this Person</string>
    <string name="friend">Friend</string>

    <string name="help">Help</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="error_to_invite_friends">Dont have app to Invite a Feiends</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel_request">Cancel</string>
    <string name="notification">Notification</string>
    <string name="email_pattern">You have entered an email incorrectly</string>
    <string name="post_description">Description</string>
    <string name="post">Post</string>

    <!--
     array string
     change Language
     -->

    <string-array name="language">
        <item>Arabic</item>
        <item>English</item>
        <item>Français</item>
        <item>Türkçe</item>
        <item>Español</item>
        <item>Italiano</item>
    </string-array>

    <!--
    array string
    change Status
    -->

    <string-array name="status">
        <item>Available</item>
        <item>Busy</item>
        <item>At School</item>
        <item>At University</item>
        <item>At the Movies</item>
        <item>At Work</item>
        <item>Battery about to die</item>
        <item>Can‘t talk, You &amp; Me only</item>
        <item>in a meeting</item>
        <item>At the gym</item>
        <item>Sleeping</item>
        <item>Urgent calls ony</item>
    </string-array>

    <!--
    array string
    change Settings
    -->

    <array name="settings">
        <item>Change Email</item>
        <item>Change password</item>
        <item>Language</item>
        <item>Delete Account</item>
        <item>Invite a friend</item>
        <item>Help</item>
    </array>

</resources>
