<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myconversation"
            android:icon="@drawable/ic_conversation"
            android:title="@string/title_activity_conversation" />
        <item
            android:id="@+id/nav_myFriends"
            android:icon="@drawable/ic_myfriends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_addFriends"
            android:icon="@drawable/ic_addfriends"
            android:title="@string/add_Friends" />
        <!--<item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />-->
    </group>

    <item android:title="@string/me">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/account_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
