<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardElevation="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:background="?android:selectableItemBackground"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_profile_image"
            android:textColor="@color/darkColor"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/graycolor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/text_open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/open_camera"
            android:textColor="@color/darkColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_chose_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/open_gallery"
            android:textColor="@color/darkColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_remove_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/remove_image"
            android:textColor="@color/darkColor"
            android:textStyle="bold" />

    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>