<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/darkColor"
    tools:context="com.ahmet.postphotos.UI.Main.Home.StartActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher_app"
        android:layout_marginBottom="50dp"
        android:scaleType="centerCrop"
        app:civ_border_width="0dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app"
        android:textSize="24sp"
        android:textColor="#fff"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@color/redcolor"/>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#000"
        android:background="#fff" />

</LinearLayout>
