<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="170dp"
    android:layout_gravity="center"
    android:gravity="center"
    app:cardElevation="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:background="?android:selectableItemBackground"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_dialog"
        android:textSize="20dp"
        android:textColor="@color/darkColor"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkColor"
        android:layout_marginTop="10dp"/>
    <CheckBox
        android:id="@+id/checkRemmemberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/remimber_me"
        android:shadowColor="@color/whiteColor"
        android:textColor="@color/darkColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkColor"
        android:layout_marginTop="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/textLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/darkColor"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/darkColor" />
        <TextView
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/darkColor"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>