<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_container"
    android:orientation="vertical"
    tools:context="com.ahmet.postphotos.UI.Account.Account_Login.ResetPasswordFragment">


    <ProgressBar
        android:id="@+id/progressBarReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/textRestPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_text"
        android:padding="10dp"/>
    <Button
        android:id="@+id/btnRestPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg"
        android:text="@string/resetPass"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textBackLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        android:textSize="22sp"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>


</LinearLayout>
