<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    app:cardElevation="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:background="?android:selectableItemBackground"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
        android:id="@+id/text_new_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="5dp"
        android:text="@string/really_delete_chat"
        android:textColor="@color/colorBalck"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/text_done_delete-chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/darkColor"
            android:textSize="15sp"
            android:background="@drawable/edit_text"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp" />
        <TextView
            android:id="@+id/text_cancel_delete_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/darkColor"
            android:textSize="15sp"
            android:background="@drawable/edit_text"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp" />
    </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>