<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frisson="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="450dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <ImageView
        android:id="@+id/profile_user_cover_image_dialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cover_image" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUserDialog"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/default_avatar2"
            android:layout_marginTop="131dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
</RelativeLayout>
    <LinearLayout
        android:id="@+id/linearUserData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20dp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/userStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="15dp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/userDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                frisson:srcCompat="@drawable/ic_chat_blue_24dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_message"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/userDialogProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView

            android:layout_width="30dp"
            android:layout_height="30dp"
            frisson:srcCompat="@drawable/ic_profile"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_profile"/>
      </LinearLayout>
    </LinearLayout>



</RelativeLayout>